SigmaCodebackup3rdSep/objects/Service_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Resources</relationshipLabel>
        <relationshipName>Service_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Travel_Speed__c</fullName>
        <label>Average Travel Speed</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Calendar</label>
        <referenceTo>Business_Calendar__c</referenceTo>
        <relationshipLabel>Service Resources</relationshipLabel>
        <relationshipName>Service_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Bin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sublevel_location__c.Inventory_Location__r.Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Location__c</valueField>
            </filterItems>
            <filterItems>
                <field>Sublevel_location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Service Resources</relationshipLabel>
        <relationshipName>Service_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Service Resources</relationshipLabel>
        <relationshipName>Service_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <label>Mailing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SR_Type__c</fullName>
        <label>SR Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Showroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Locations_Type__c</field>
                <operation>equals</operation>
                <value>Truck</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Resources (Location)</relationshipLabel>
        <relationshipName>Service_Resources2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>San Mateo</fullName>
                </value>
                <value>
                    <fullName>Trinity</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Resource</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>